--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@mui/material": "^5.15.16",
-    "@react-pdf-viewer/core": "^3.12.0",
+    "@pdftron/webviewer": "^10.9.0",
+    "@react-pdf-viewer/core": "^3.7.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf/renderer": "^3.4.4",
     "axios": "^1.5.1",
@@ -26,10 +27,11 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "json-server": "^0.17.4",
-    "pdfjs-dist": "^3.4.120",
+    "pdfjs-dist": "^2.16.105",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-pdf": "^8.0.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "serve": "^14.2.1",
