--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
-    "@mui/material": "^5.15.16",
+    "@mui/icons-material": "^5.15.17",
+    "@mui/material": "^5.15.17",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@pdftron/webviewer": "^10.9.0",
     "@react-pdf-viewer/core": "^3.7.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
@@ -35,6 +37,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "serve": "^14.2.1",
+    "styled-components": "^6.1.11",
     "super": "^0.2.3"
   },
   "devDependencies": {
