--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "serve": "^14.2.1",
-    "super": "^0.2.3"
+    "super": "^0.2.3",
+    "sweetalert2": "^11.11.0",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
